[package]
name = "stellar-doc-verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1.35", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
url = "2"

# Stellar SDK
stellar_sdk = "0.1"
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Redis cache
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Rate limiting
governor = "0.6"

# Metrics
prometheus = "0.13"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Crypto
sha2 = "0.10"
hex = "0.4"
chrono = "0.4.43"

[dev-dependencies]
httpmock = "0.7"
axum-test = "16.4.1"
